# codex-scrub

./: AGENTS.md  CHECKPOINT.md  README.md  pyproject.toml
src/codex_scrub/: __init__.py  cleanup.py  codex.py  storage.py  tui.py
