[project]
name = "codex-scrub"
version = "1.1.2"
description = "Delete and scrub Codex app threads"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["textual==8.2.7"]

[project.scripts]
codex-scrub = "codex_scrub:main"

[dependency-groups]
dev = ["ruff==0.15.14", "ty==0.0.39"]

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
exclude = ["codex"]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ty.src]
exclude = ["codex"]
